Hey, I just fixed you and this is crazy. But here's my media query, so stretch, maybe?

--- a/sass/custom.sass
+++ b/sass/custom.sass
@@ -254,6 +254,7 @@ span.date-more
     margin-top: 10px
     display: block
     float: none
+    text-align: center
 
 /* Smartphones (landscape) ----------- */
 @media only screen and (min-width : 321px) and (max-device-width : 480px)
